# icfpc2021

./: .gitignore  .gitmodules  20210709-1252.html  20210709-1306.html  20210709-1316.html  20210709-1326.html  20210709-1333.html  20210709-1339.html  20210709-1345.html  20210709-1350.html  20210709-1356.html  20210709-1402.html  20210709-1409.html  20210709-1419.html  20210709-1427.html  20210709-1433.html  20210709-1439.html  20210709-1445.html  20210709-1450.html  20210709-1456.html  20210709-1502.html  20210709-1509.html  20210709-1519.html  20210709-1531.html  20210709-1541.html  20210709-1551.html  20210709-1557.html  20210709-1603.html  20210709-1612.html  20210709-1623.html  20210709-1638.html  20210709-1653.html  20210709-1705.html  20210709-1715.html  20210709-1726.html  20210709-1737.html  20210709-1744.html  20210709-1750.html  20210709-1756.html  20210709-1802.html  (+484 more)
chokudai_test/: 62.json  64.json  68_2.json  68_3.json  68_pre.json  76.json  76_2.json  90.json  90_2.json  90_3.json  90_4.json  90_6.json  93.json
config/: service_account.json
docker/: Makefile  phpmyadmin.Dockerfile
docs/: best_solution?problem_id=100  best_solution?problem_id=102  best_solution?problem_id=103  best_solution?problem_id=105  best_solution?problem_id=111  best_solution?problem_id=126  best_solution?problem_id=127  best_solution?problem_id=131  best_solution?problem_id=18  best_solution?problem_id=33  best_solution?problem_id=36  best_solution?problem_id=43  best_solution?problem_id=45  best_solution?problem_id=62  best_solution?problem_id=64  best_solution?problem_id=66  best_solution?problem_id=69  best_solution?problem_id=71  best_solution?problem_id=72  best_solution?problem_id=76  best_solution?problem_id=78  best_solution?problem_id=79  best_solution?problem_id=85  best_solution?problem_id=88  best_solution?problem_id=89  best_solution?problem_id=91  best_solution?problem_id=92  best_solution?problem_id=95  bonuses  bonuses.html  index.html  problems  problems.html  submit  submit.html
go/: Dockerfile  Makefile  go.mod  go.sum
gui/: Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.json  webpack.config.js
partial_solutions/: 64_6.json
problems/: 1.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  11.json  12.json  13.json  14.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  24.json  25.json  28.json  29.json  3.json  31.json  32.json  33.json  34.json  35.json  36.json  39.json  4.json  42.json  5.json  (+41 more)
(+297 files in other folders)
