[package]
name = "icfpc2021"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "*"
web-sys = { version = "*", features = ["console"] }
console_error_panic_hook = { version = "*", optional = true }
wee_alloc = { version = "*", optional = true }
