[package]
name = "icfpc2021"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["rlib", "cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["console_error_panic_hook", "wee_alloc"]

[dependencies]
glob = "0.3.0"
image = "*"
num = "*"
rand = "*"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
svg = "*"
docopt = "1.1.1"
indicatif = "0.16.2"
chrono = "0.4.19"
ordered-float = "2.6.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "*"
web-sys = { version = "*", features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'SvgCircleElement',
  'SvgElement',
  'Window',
  "console",
] }
console_error_panic_hook = { version = "*", optional = true }
wee_alloc = { version = "*", optional = true }
getrandom = { version = "*", features = ["js"] }

[profile.release]
debug = true
